# nonebot-plugin-fortune

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_fortune/: __init__.py  config.py  data_source.py
